[workspace]
members = [
    "1-api-request",
    "2-processes-vs-threads",
    "3-multiple-async-tasks",
    "4-file-watcher",
    "5-file-writer",
    "6-async-tail-f",
    "7-hello-server",
    "8-basic-counting-future",
    "9-local-chat-mesh",
    "10-pinning-in-futures",
    "11-context-in-futures",
    "12-cancel-safety",
    "13-waking-futures-remotely",
    "14-sharing-data-between-futures",
    "15-async-logger",
    "16-async-queue",
    "17-background-process",
]
resolver = "2"

[workspace.dependencies]
# Common crates used across multiple projects
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"

# Crates used in specific projects
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
rayon = "1.10.0"
notify = "6.1.1"
rand = "0.8.5"
hyper = { version = "1.6.0", features = ["full"] }
sysinfo = "0.30.13"
nanoid = "0.4.0"

# Server dependencies
axum = "0.7.9"
tower = "0.4.13" # tower 0.5 is not compatible with axum 0.7
tower-http = { version = "0.5.2", features = ["trace"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
anyhow = "1.0.94"
