[package]
name = "hello_raft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
raft = { workspace = true }
serde = { workspace = true, features = ["derive"] }
slog = { workspace = true }
