[package]
name = "hello-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }

# Inherit server dependencies from workspace
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
serde = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
